gccida/c1/const_hash
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/const_hash/src/varasm.c:2969:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/const_hash/src/varasm.c:2973:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/const_hash/src/varasm.c:3024:20: error: expected expression
v16 = ( tree_node *)j[4]; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/const_hash/src/varasm.c:3024:9: error: use of undeclared identifier 'tree_node'
v16 = ( tree_node *)j[4]; 
        ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/const_hash/src/obj/varasm.o] Error 1
